--- a/main.css
+++ b/main.css
@@ -19,11 +19,4 @@ h2 {
   margin: 5px;
 }
 img{
-  display: block;}
-
-.center {
-  margin: auto;
-  width: 50%;
-  border: 3px solid green;
-  padding: 10px;
-}
+  display: inline;}
