--- a/main.css
+++ b/main.css
@@ -19,7 +19,7 @@ h2 {
   padding: 10px 10px;
   margin: 5px;
   clear: both;
+  display: inline;
 }
 img{
-  display: inline;
-float: left}
+  display: inline;}
